# Beam-x

./: .gitignore
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/beamx/app/beamx/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: bridge_generated.dart  main.dart
mobile/lib/screens/: about_screen.dart  chat_screen.dart  clipboard_screen.dart  discovery_screen.dart  history_screen.dart  qr_screen.dart  settings_screen.dart  transfer_screen.dart
mobile/linux/: CMakeLists.txt  bridge_generated.h  my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/native/: Cargo.toml
mobile/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
