[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.82"
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
